--- a/newpro/templates/name.html
+++ b/newpro/templates/name.html
@@ -10,7 +10,7 @@
     {{ form }}
     <input type="submit" value="Submit">
 </form>
-<h3> The HostName {{ Hostname }} </h3>
-<h4> The Package {{ Package }} </h4>
+<h3> The HostName is changed to {{ Hostname }} </h3>
+<h4> The Package installed is {{ Package }} </h4>
 </body>
 </html>
